--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Humberto
-middle_name: B.
-last_name: Cunha-Jr
+middle_name: Cunha
+last_name: 
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
