--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Humberto
-middle_name: Cunha
+middle_name: Beltrão
 last_name: 
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
